--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,6 @@
 3.0.16
   * Deserialise sstable metadata in nodetool verify (CASSANDRA-13922)
-
+  * Indexes creation should have IF EXISTS on its String representation (CASSANDRA-13935)
 
 3.0.15
  * Improve TRUNCATE performance (CASSANDRA-13909)
